# prly

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: ci.yml
docs/: architecture.md  data-model.md  open-source-project-shape.md  personal-operations-harness.md  roadmap.md
tests/: test_models.py
