[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prly"
version = "0.1.0"
description = "Open-source personal operations harness"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "김지섭" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pyyaml>=6.0",
]

[tool.setuptools]
package-dir = {"" = "packages/prly-core/src"}

[tool.setuptools.packages.find]
where = ["packages/prly-core/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "packages/prly-core/src"
]
